# babeltrace-rs

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  flake.nix  module.c
.github/workflows/: ci.yml
babeltrace-sys/: Cargo.toml  build.rs
babeltrace-sys/src/: lib.rs
db_converter/: Cargo.toml  module.c
db_converter/src/: lib.rs
nix/: babeltrace2.nix  flake.nix  package.nix
