[package]
name = "babeltrace-sys"
version = "0.1.0"
edition = "2021"
links = "babeltrace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1.0.82"
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.95"
